2010-08-15  Dirk Eddelbuettel  <edd@debian.org>

	* Release 0.1.0 and initial committ
